--- a/templates/base.html
+++ b/templates/base.html
@@ -1,40 +1,44 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+          integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <title>{% block head_title %}{% endblock %}</title>
     {% block extra_head %}
     {% endblock %}
-  </head>
-  <body>
+</head>
+<body>
+<div class="container text-center">
     {% block body %}
-
-    {% if messages %}
-    <div>
-      <strong>Messages:</strong>
-      <ul>
-        {% for message in messages %}
-        <li>{{message}}</li>
-        {% endfor %}
-      </ul>
-    </div>
-    {% endif %}
-
-    <div>
-      <strong>Menu:</strong>
-      <ul>
-        {% if user.is_authenticated %}
-        <li><a href="{% url 'account_email' %}">Change E-mail</a></li>
-        <li><a href="{% url 'account_logout' %}">Sign Out</a></li>
-        {% else %}
-        <li><a href="{% url 'account_login' %}">Sign In</a></li>
-        <li><a href="{% url 'account_signup' %}">Sign Up</a></li>
+        {% if messages %}
+            <div class="alert-success">
+                <strong>알림:</strong>
+                <p>
+                    {% for message in messages %}
+                        {{ message }}<br>
+                    {% endfor %}
+                </p>
+            </div>
         {% endif %}
-      </ul>
-    </div>
-    {% block content %}
-    {% endblock %}
+
+        {#    <div>#}
+        {#        <strong>Menu:</strong>#}
+        {#        <ul>#}
+        {#            {% if user.is_authenticated %}#}
+        {#                <li><a href="{% url 'account_email' %}">Change E-mail</a></li>#}
+        {#                <li><a href="{% url 'account_logout' %}">Sign Out</a></li>#}
+        {#            {% else %}#}
+        {#                <li><a href="{% url 'account_login' %}">Sign In</a></li>#}
+        {#                <li><a href="{% url 'account_signup' %}">Sign Up</a></li>#}
+        {#            {% endif %}#}
+        {#        </ul>#}
+        {#    </div>#}
+        {% block content %}
+        {% endblock %}
     {% endblock %}
     {% block extra_body %}
     {% endblock %}
-  </body>
+</div>
+
+</body>
 </html>
